k8s/stage/clickhouse.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: loudkeeper
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  selector:
    clickhouse.altinity.com/chi: loudkeeper
    clickhouse.altinity.com/cluster: main
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: native
      port: 9000
      targetPort: 9000
