k8s/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loudkeeper
  namespace: loudkeeper
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: pp-nginx
  tls:
    - hosts:
        - app.loudkeeper.ai
      secretName: cert-app-loudkeeper-ai
  rules:
    - host: app.loudkeeper.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loudkeeper
                port:
                  number: 8080
